<resources>
    <string name="app_name">Food Runner</string>
    <string name="title_activity_login">Login_Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now</string>
    <string name="passcode_6_digits">Passcode ( 6 digits )</string>
    <string name="phone_number_10_digits">Phone Number ( 10 digits )</string>
    <string name="name_min_3_character">Name ( Min. 3 character )</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_10_digits">Mobile Number ( 10 digits )</string>
    <string name="delivery_address">Delivery Address ( Upto 50 characters )</string>
    <string name="password_min_6_character">Password (Min. 6 character )</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="instruction">Enter your registered mobile number and email below:</string>
    <string name="mobile">Mobile Number ( 10 digits )</string>
    <string name="email_address1">Email Address</string>
    <string name="next1">Next</string>
    <string name="moto">You don\'t need a silver fork to eat a good food</string>
    <string name="our_speciality">Our Speciality</string>
    <string name="coffeprice">Rate :- $10</string>
    <string name="restaurant">Jhonny\'s Kitchen</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="burgerRate">Rate :- $10</string>
    <string name="pastry">Pastry</string>
    <string name="pastryRate">Rate :- $15</string>
    <string name="ice_creams">Ice Creams</string>
    <string name="iceCreamRate">Rate :- $5</string>
    <string name="cheese_pasta">Cheese Pasta</string>
    <string name="pastaRate">Rate :- $25</string>
    <string name="cappuccino">Cappuccino</string>

    <string name="product1"> Ice Cream </string>
    <string name="product2"> Cheese Burger </string>
    <string name="product3"> Pastry </string>
    <string name="product4"> Cheese Pasta </string>
    <string name="product5"> Cappuccino </string>

    <string name="resturant1"> Street Kitchen</string>
    <string name="resturant2"> Sky High</string>
    <string name="resturant3"> Indian Coffee House</string>
    <string name="resturant4"> Baskin Robin</string>
    <string name="resturant5"> Jhonnys Kitchen</string>

    <string name="price1"> $10</string>
    <string name="price2"> $20</string>
    <string name="price3"> $5</string>
    <string name="price4"> $15</string>
    <string name="price5"> $25</string>
</resources>