<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <ImageView
        android:id="@+id/imageViewname"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldName"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="82dp"
        android:layout_width="match_parent"
        android:layout_marginStart="80dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_min_3_character"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewname"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"


            android:maxLength="10"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewname"
        app:srcCompat="@drawable/mail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldEmail"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldName">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewPhone"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEmail"
        app:srcCompat="@drawable/phone2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldMobile"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number_10_digits"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewPhone"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldEmail">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewLocation"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhone"
        app:srcCompat="@drawable/location" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldAddress"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLocation"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldMobile">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewLock1"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLocation"
        app:srcCompat="@drawable/padlock" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledTextFieldPassword1"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_min_6_character"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLock1"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldAddress">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewLock2"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLock1"
        app:srcCompat="@drawable/padlock" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLock2"
        app:layout_constraintTop_toBottomOf="@+id/filledTextFieldPassword1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"


            android:maxLength="15"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />




</androidx.constraintlayout.widget.ConstraintLayout>